assignment-8-configuration-management-satishkumard/AnsiblePress_usingVPCSecurityForDB.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "SSMAccessRole": {
       "Type": "AWS::IAM::Role",
       "Properties": {
          "AssumeRolePolicyDocument": {
             "Version" : "2012-10-17",
             "Statement": [ {
                "Effect": "Allow",
                "Principal": {
                   "Service": [ "ec2.amazonaws.com" ]
                },
                "Action": [ "sts:AssumeRole" ]
             } ]
          },
          "Path": "/"
       }
    },
    "SSMRolePolicies": {
       "Type": "AWS::IAM::Policy",
       "Properties": {
          "PolicyName": "ssmProperties",
          "PolicyDocument": {
             "Version" : "2012-10-17",
             "Statement": [
               {
                 "Effect": "Allow",
                 "Action": [
                   "ssm:DescribeParameters",
                   "ssm:PutParameter",
                   "ssm:GetParameters",
                   "ssm:DeleteParameter"
                 ],
                 "Resource": {
                   "Fn::Join" : [
                     "",
                     [
                       "arn:aws:ssm:",
                       { "Ref" : "AWS::Region" },
                       ":",
                       { "Ref" : "AWS::AccountId"},
                       {
                         "Fn::Join" : [
                           "",
                           [ ":parameter/", { "Ref": "AWS::StackName" }, ".*" ]
                         ]
                       }
                     ]
                   ]
                  }
                 }
               ]
          },
          "Roles": [ { "Ref": "SSMAccessRole" } ]
       }
    },
    "SSMInstanceProfile": {
       "Type": "AWS::IAM::InstanceProfile",
       "Properties": {
          "Path": "/",
          "Roles": [ { "Ref": "SSMAccessRole" } ]
       }
    },
    "web1pem" : {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Name" : {
          "Fn::Join" : [
            "",
            [ { "Ref": "AWS::StackName" }, ".web1pem" ]
          ]
        },
        "Type" : "String",
        "Value" : "0",
        "Description": "web1 instance private key."
      }
    },

    "wordpressVpc": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
            "EnableDnsSupport": "true",
            "EnableDnsHostnames": "true",
            "CidrBlock": "10.0.0.0/16",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "Test"
                }
            ]
        }
    },
    "publicSubnet": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
            "VpcId": {
                "Ref": "wordpressVpc"
            },
            "CidrBlock": "10.0.0.0/24"
        }
    },
    "privateSubnet": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
            "VpcId": {
                "Ref": "wordpressVpc"
            },
            "CidrBlock": "10.0.2.0/24",
            "AvailabilityZone" : {
                "Fn::Select" : [ "0", { "Fn::GetAZs" : { "Ref" : "AWS::Region" }}]
              }
        }
    },
    "privateSubnet2": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
            "VpcId": {
                "Ref": "wordpressVpc"
            },
            "CidrBlock": "10.0.4.0/24",
            "AvailabilityZone" : {
                "Fn::Select" : [ "1", { "Fn::GetAZs" : { "Ref" : "AWS::Region" }}]
              }
        }
    },
	"wordpressDBSubnetGroup" : {
         "Type" : "AWS::RDS::DBSubnetGroup",
         "Properties" : {
            "DBSubnetGroupDescription" : "DB Subnet Group",
            "SubnetIds" : [ { "Ref": "privateSubnet" }, { "Ref": "privateSubnet2" } ]
         }
      },
    "web1": {
        "Type": "AWS::EC2::Instance",
        "DependsOn": [
            "web1pem"
        ],
        "Properties": {
            "InstanceType": "t2.micro",
            "ImageId": "ami-22ce4934",
            "IamInstanceProfile": {
              "Ref": "SSMInstanceProfile"
            },
            "KeyName": {
                "Ref": "KeyName"
            },
            "NetworkInterfaces": [
                {
                    "GroupSet": [
                        {
                            "Ref": "WebServerSecurityGroup"
                        }
                    ],
                    "AssociatePublicIpAddress": "true",
                    "DeviceIndex": "0",
                    "DeleteOnTermination": "true",
                    "SubnetId": {
                        "Ref": "publicSubnet"
                    }
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "web1"
                }
            ],
            "UserData" : {
              "Fn::Base64" : {
                "Fn::Join" : [
                  "", [
                    "#!/bin/bash -xe\n",
                    "ssh-keygen -f /home/ec2-user/.ssh/web1-key.pem -q -N \"\"\n",
                    "chown ec2-user:ec2-user /home/ec2-user/.ssh/web1-key.pem\n",
                    "chown ec2-user:ec2-user /home/ec2-user/.ssh/web1-key.pem.pub\n",
                    "PEMFILE=`cat /home/ec2-user/.ssh/web1-key.pem`\n",
                    "aws ssm put-parameter --name ", { "Ref" : "web1pem" }, " --type String --value \"${PEMFILE}\" --overwrite --region ", { "Ref" : "AWS::Region" },"\n",
                    "cat /home/ec2-user/.ssh/web1-key.pem.pub >> /home/ec2-user/.ssh/authorized_keys\n",
                    "# Signal the status from cfn-init\n",
                    "/opt/aws/bin/cfn-signal -e $? ",
                    "         --stack ",
                    {
                        "Ref": "AWS::StackName"
                    },
                    "         --resource web1 ",
                    "         --region ",
                    {
                        "Ref": "AWS::Region"
                    },
                    "\n"
                  ]
                ]
              }
            }
        },
        "CreationPolicy": {
            "ResourceSignal": {
                "Timeout": "PT5M"
            }
        }
    },
    "mgmt1": {
        "Type": "AWS::EC2::Instance",
        "DependsOn" : ["web1", "wordpressdb"],
        "Properties": {
            "InstanceType": "t2.micro",
            "ImageId": "ami-22ce4934",
            "IamInstanceProfile": {
              "Ref": "SSMInstanceProfile"
            },
            "KeyName": {
                "Ref": "KeyName"
            },
            "NetworkInterfaces": [
                {
                    "GroupSet": [
                        {
                            "Ref": "WebServerSecurityGroup"
                        }
                    ],
                    "AssociatePublicIpAddress": "true",
                    "DeviceIndex": "0",
                    "DeleteOnTermination": "true",
                    "SubnetId": {
                        "Ref": "publicSubnet"
                    }
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "mgmt1"
                }
            ],
            "UserData" : {
              "Fn::Base64" : {
                "Fn::Join" : [
                  "", [
                    "#!/bin/bash -xe\n",
                    "echo 'PATH=$PATH:/bin:/sbin:/usr/bin:/usr/local/bin' > /etc/environment\n",
                    "export PATH=$PATH:/bin:/sbin:/usr/bin:/usr/local/bin\n",
                    {"Fn::Join" : [
                        "", [
                            "echo 'DATABASE_NAME=",
                            {"Ref": "DBName"},
                            "' >> /etc/environment\n"
                        ]
                    ]},
                    {"Fn::Join" : [
                        "", [
                            "echo 'DATABASE_USERNAME=",
                            {"Ref": "DBUser"},
                            "' >> /etc/environment\n"
                        ]
                    ]},
                    {"Fn::Join" : [
                        "", [
                            "echo 'DATABASE_PASSWORD=",
                            {"Ref": "DBPassword"},
                            "' >> /etc/environment\n"
                        ]
                    ]},
                    {"Fn::Join" : [
                        "", [
                            "echo 'DATABASE_ENDPOINT=",
                            {"Fn::GetAtt": ["wordpressdb","Endpoint.Address"]},
                            "' >> /etc/environment\n"
                        ]
                    ]},
                    "sed -i '/\\bsecure_path\\b/s/$/:\\/usr\\/local\\/bin/' /etc/sudoers\n",
                    "yum-config-manager --enable epel -y\n",
                    "yum install jq ansible -y\n",
                    "mkdir -p /home/ec2-user/ansible_templates\n",
                    "wget -O /home/ec2-user/ansible_templates/wp-config.j2 https://s3.amazonaws.com/seis665/wp-config.j2\n",
                    "echo \"web1 ansible_host=", {"Fn::GetAtt" : ["web1","PrivateIp"]}, " ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/.ssh/web1-key.pem\" > /etc/ansible/hosts\n",
                    "sed -i '/host_key_checking/s/^#//g' /etc/ansible/ansible.cfg\n",
                    "aws ssm get-parameters --name \"", { "Ref" : "web1pem" }, "\" --region ", { "Ref" : "AWS::Region" }, " | jq '.Parameters[0].Value' --raw-output > /home/ec2-user/.ssh/web1-key.pem\n",
                    "chown ec2-user:ec2-user /home/ec2-user/.ssh/*.pem\n",
                    "chmod 600 /home/ec2-user/.ssh/*.pem"
                  ]
                ]
              }
            }
        }
    },
    "wordpressdb": {
      "Type" : "AWS::RDS::DBInstance",
      "DependsOn": [
        "wordpressDBSubnetGroup",
		"WebServerSecurityGroup"
      ],
      "Properties" : {
      "AllocatedStorage" : "5",
      "DBInstanceClass" : "db.t2.micro",
      "DBName" : { "Ref" : "DBName" },
      "VPCSecurityGroups" : [{ "Ref" : "WebServerSecurityGroup" } ],
      "Engine" : "MySQL",
      "EngineVersion" : "5.6.41",
      "MasterUsername" : { "Ref" : "DBUser" },
      "MasterUserPassword" : { "Ref" : "DBPassword" },
	    "MultiAZ" : "false",
      "DBSubnetGroupName" : { "Ref" : "wordpressDBSubnetGroup" },
      "Tags" : [{"Key" : "Name", "Value" : "wordpress" }]
      }
    },
    "WebServerSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
            "VpcId": {
                "Ref": "wordpressVpc"
            },
            "GroupDescription": "Allow access from HTTP and SSH traffic",
            "SecurityGroupIngress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": "80",
                    "ToPort": "80",
                    "CidrIp": "0.0.0.0/0"
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": "22",
                    "ToPort": "22",
                    "CidrIp": {"Ref": "YourIp"}
                }
            ]
        }
    },
    "WebServerSGIngressTCP22": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Metadata": {
        "Comment": "SSH ingress security rule"
      },
      "Properties" : {
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": { "Ref": "WebServerSecurityGroup" },
        "GroupId": { "Fn::GetAtt": ["WebServerSecurityGroup", "GroupId"]}
      }
    },
    "InternetGateway": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {}
    },
    "EC2VPCG509RW": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
            "InternetGatewayId": {
                "Ref": "InternetGateway"
            },
            "VpcId": {
                "Ref": "wordpressVpc"
            }
        }
    },
    "PublicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
            "VpcId": {
                "Ref": "wordpressVpc"
            }
        }
    },
    "PublicRoute": {
        "Type": "AWS::EC2::Route",
		"DependsOn": [
            "InternetGateway"
        ],
        "Properties": {
            "DestinationCidrBlock": "0.0.0.0/0",
            "RouteTableId": {
                "Ref": "PublicRouteTable"
            },
            "GatewayId": {
                "Ref": "InternetGateway"
            }
        }
    },
    "EC2SRTA56MZL": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
            "RouteTableId": {
                "Ref": "PublicRouteTable"
            },
            "SubnetId": {
                "Ref": "publicSubnet"
            }
        }
    }
  },
  "Parameters": {
      "KeyName": {
          "Description": "Name of your EC2 KeyPair to enable SSH access to the instances.",
          "Type": "AWS::EC2::KeyPair::KeyName",
          "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
      },
      "YourIp": {
        "Description": "The current CIDR IP address of your workstation (x.x.x.x/32). http://checkip.amazonaws.com/",
        "Type": "String"
      },
      "DBName": {
        "Description": "Database name",
        "Type": "String",
        "Default": "wordpress"
      },
      "DBUser": {
        "Description": "Database user name",
        "Type": "String"
      },
      "DBPassword": {
        "Description": "Database password",
        "Type": "String"
      }
  },
  "Outputs": {
      "web1PublicIp": {
        "Value": {"Fn::GetAtt": ["web1","PublicIp"]},
        "Description": "web1 public IP"
      },
      "mgmt1PublicIp": {
          "Value": {"Fn::GetAtt": ["mgmt1","PublicIp"]},
          "Description": "mgmt1 public IP"
      },
      "wordpressDbEndpoint": {
        "Value": {
                "Fn::GetAtt": [
                  "wordpressdb",
                  "Endpoint.Address"
                ]
        },
        "Description": "wordpress DB endpoint"
      }
  }
}
